Add Icons for SMB Provider.

Added the icons for the native SMB client to the theme, this changes
the icon under the "Add New Services" menu in the Files app to the
correct one. Updated the URLs in smb_provider.cc accordingly.

BUG=chromium:842753
TEST=verified on test device (cave board)

Change-Id: Id4f835f0ea167707c34f35b9022c6f685ce2f958
Reviewed-on: https://chromium-review.googlesource.com/1077548
Reviewed-by: Zentaro Kavanagh <zentaro@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Adolfo Higueros <adokar@google.com>
Cr-Commit-Position: refs/heads/master@{#565679}
Former-commit-id: 8d1bf34d24837930ef8c58f305c38f6123426dc0